--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -54,9 +54,17 @@ if(NOT (EMSCRIPTEN OR ANDROID))
     define_engine_source_files(os/glfw)
 endif ()
 
+if (WIN32 OR WINDOWS_STORE)
+    define_engine_source_files(graphics/d3d)
+
+    if (NOT ALIMER_DISABLE_D3D11)
+        define_engine_source_files(graphics/d3d11)
+    endif ()
+endif ()
+
 if (ALIMER_D3D12)
     define_engine_source_files(graphics/d3d)
-    define_engine_source_files(graphics/d3d12)
+    #define_engine_source_files(graphics/d3d12)
 endif ()
 
 if (ALIMER_VULKAN)
@@ -84,6 +92,7 @@ target_include_directories(${PROJECT_NAME} PUBLIC
 )
 
 target_link_libraries(${PROJECT_NAME} PUBLIC
+    stb
     imgui
 )
 
@@ -99,9 +108,15 @@ else()
     endif()
 endif()
 
+if (ALIMER_DISABLE_D3D11)
+    target_compile_definitions(alimer PRIVATE ALIMER_ENABLE_DIRECT3D11=0)
+else()
+    target_link_libraries(alimer PRIVATE d3d11 dxgi dxguid)
+endif ()
+
 if (ALIMER_D3D12)
-    target_compile_definitions(${PROJECT_NAME} PRIVATE ALIMER_D3D12)
-    target_link_libraries(${PROJECT_NAME} PRIVATE D3D12MemoryAllocator)
+    #target_compile_definitions(${PROJECT_NAME} PRIVATE ALIMER_D3D12)
+    #target_link_libraries(${PROJECT_NAME} PRIVATE D3D12MemoryAllocator)
 endif ()
 
 if (ALIMER_VULKAN)
