--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,10 +21,12 @@ option(ALIMER_SKIP_INSTALL "Skips installation targets." OFF)
 
 # Options
 if (WIN32)
-    option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend" ON)
+    option(ALIMER_GRAPHICS_D3D11 "Include Direct3D11 backend" ON)
+    option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend (experimental)" ON)
     option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend" ON)
 elseif (WINDOWS_STORE)
-    set(ALIMER_GRAPHICS_D3D12 ON CACHE BOOL "Include Direct3D11 renderer")
+    set(ALIMER_GRAPHICS_D3D11 ON CACHE BOOL "Include Direct3D11 renderer")
+    option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend (experimental)" ON)
 else ()
     option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend" ON)
 endif ()
@@ -80,6 +82,9 @@ endif ()
 
 # Print current build configuration
 message (STATUS "Build Configuration:")
+if (ALIMER_GRAPHICS_D3D11)
+    message (STATUS "Graphics API:          Direct3D11 (ALIMER_GRAPHICS_D3D11)")
+endif()
 if (ALIMER_GRAPHICS_D3D12)
     message (STATUS "Graphics API:          Direct3D12 (ALIMER_GRAPHICS_D3D12)")
 endif()
