New interface and simple graphics logic, restore vulkan logic, still WIP.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ if (WIN32)
     option(ALIMER_GRAPHICS_D3D11 "Include Direct3D11 backend" ON)
     option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend (experimental)" ON)
     option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend" ON)
+    option(ALIMER_GRAPHICS_OPENGL "Include OpenGL backend" ON)
 elseif (WINDOWS_STORE)
     set(ALIMER_GRAPHICS_D3D11 ON CACHE BOOL "Include Direct3D11 renderer")
     option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend (experimental)" ON)
