Remove all WIP vgpu and C gpu logic, we'll focus on D3D12 and Vulkan C++ backends first.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 # CMake version
 cmake_minimum_required(VERSION 3.10)
 
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
@@ -21,15 +21,14 @@ option(ALIMER_SKIP_INSTALL "Skips installation targets." OFF)
 
 # Options
 if (WIN32)
-    option(ALIMER_GRAPHICS_D3D11 "Include Direct3D11 backend" ON)
-    option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend (experimental)" ON)
+    #option(ALIMER_GRAPHICS_D3D11 "Include Direct3D11 backend" ON)
+    option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend" ON)
     option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend" ON)
-    option(ALIMER_GRAPHICS_OPENGL "Include OpenGL backend" ON)
 elseif (WINDOWS_STORE)
-    set(ALIMER_GRAPHICS_D3D11 ON CACHE BOOL "Include Direct3D11 renderer")
-    option(ALIMER_GRAPHICS_D3D12 "Include Direct3D12 backend (experimental)" ON)
+    #set(ALIMER_GRAPHICS_D3D11 ON CACHE BOOL "Include Direct3D11 renderer")
+    set(ALIMER_GRAPHICS_D3D12 ON CACHE BOOL "Include Direct3D12 backend")
 else ()
-    option(ALIMER_GRAPHICS_VULKAN "Include Vulkan backend" ON)
+    set(ALIMER_GRAPHICS_VULKAN ON CACHE BOOL "Include Vulkan backend")
 endif ()
 
 if (ANDROID OR IOS OR EMSCRIPTEN)
@@ -84,6 +83,20 @@ endif ()
 # Set VS Startup project.
 if(CMAKE_VERSION VERSION_GREATER "3.6" AND ALIMER_BUILD_EDITOR)
     set_property (DIRECTORY PROPERTY VS_STARTUP_PROJECT "Editor")
+endif()
+
+# Print current build configuration
+message(STATUS "Build Configuration:")
+if (ALIMER_BUILD_SHARED)
+    message(STATUS "  Library         SHARED")
+else ()
+    message(STATUS "  Library         STATIC")
+endif ()
+if (ALIMER_GRAPHICS_D3D12)
+    message (STATUS "  Renderer:       Direct3D12")
+endif()
+if (ALIMER_GRAPHICS_VULKAN)
+    message (STATUS "  Renderer:       Vulkan")
 endif()
 
 # Install files
