New ImGui 1.77 WIP docking integration with Direct3D12 backend logic.

--- a/Source/Tools/Editor/CMakeLists.txt
+++ b/Source/Tools/Editor/CMakeLists.txt
@@ -18,4 +18,8 @@ install(TARGETS Editor
     BUNDLE  DESTINATION ${DEST_BIN_DIR_CONFIG}
 )
 
+if (MSVC)
+    set_property(TARGET Editor PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
+endif ()
+
 set_property(TARGET Editor PROPERTY FOLDER "Editor")
