--- a/Source/Plugins/CMakeLists.txt
+++ b/Source/Plugins/CMakeLists.txt
@@ -1,3 +1,7 @@
 if (WIN32 OR WINDOWS_STORE)
-    #add_subdirectory(Alimer.Direct3D11)
+    add_subdirectory(Alimer.Direct3D11)
+endif ()
+
+if (WIN32)
+    add_subdirectory(Alimer.Vulkan)
 endif ()
