--- a/Source/Plugins/CMakeLists.txt
+++ b/Source/Plugins/CMakeLists.txt
@@ -1,5 +1,6 @@
 if (WIN32 OR WINDOWS_STORE)
     add_subdirectory(Alimer.Direct3D11)
+    add_subdirectory(Alimer.Direct3D12)
 endif ()
 
 if (WIN32)
