More vgpu logic and ImGUI wip logic.

--- a/tools/editor_framework/CMakeLists.txt
+++ b/tools/editor_framework/CMakeLists.txt
@@ -6,8 +6,14 @@ set(TARGET_NAME editor_framework)
 file (GLOB_RECURSE SOURCE_FILES *.cpp *.h *.hpp)
 
 add_library(${TARGET_NAME} ${SOURCE_FILES})
+target_include_directories(${TARGET_NAME} PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+)
+
 target_link_libraries(${TARGET_NAME} PUBLIC
     imgui
     Alimer
 )
+
 set_property(TARGET ${TARGET_NAME} PROPERTY FOLDER "Editor")
