--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -3,6 +3,6 @@ if (NOT ALIMER_BUILD_TOOLS AND NOT ALIMER_BUILD_EDITOR)
 endif ()
 
 if (ALIMER_BUILD_EDITOR)
-    add_subdirectory(editor_framework)
+    add_subdirectory(EditorFramework)
     add_subdirectory(Editor)
 endif ()
