--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -48,17 +48,11 @@ if (WIN32)
     define_engine_source_files(Platform/Windows)
 endif ()
 
-if(WIN32 OR WINDOWS_STORE)
-    define_engine_source_files(Graphics/D3D)
-    define_engine_source_files(Graphics/D3D11)
-endif ()
-
-if (ALIMER_GRAPHICS_D3D12)
-    #define_engine_source_files(Graphics/D3D12)
-endif ()
-
-if (ALIMER_GRAPHICS_VULKAN)
+if (ALIMER_VULKAN)
     define_engine_source_files(Graphics/Vulkan)
+elseif (ALIMER_D3D12)
+    define_engine_source_files(Graphics/D3D)
+    define_engine_source_files(Graphics/D3D12)
 endif ()
 
 group_sources()
@@ -80,13 +74,13 @@ target_link_libraries(${TARGET_NAME} PUBLIC
     stb
 )
 
-if(WIN32 OR WINDOWS_STORE)
-    target_compile_definitions(${TARGET_NAME} PRIVATE ALIMER_D3D11_BACKEND)
-endif ()
-
-if (ALIMER_GRAPHICS_D3D12)
-    #target_compile_definitions(${TARGET_NAME} PRIVATE ALIMER_D3D12_BACKEND)
-    #target_link_libraries(${TARGET_NAME} PRIVATE D3D12MemoryAllocator)
+if (ALIMER_VULKAN)
+    target_link_libraries(${TARGET_NAME} PRIVATE
+        volk
+        vma
+    )
+elseif (ALIMER_D3D12)
+    target_link_libraries(${TARGET_NAME} PRIVATE D3D12MemoryAllocator)
 endif ()
 
 # Link platform specific libraries
