Graphics: Restore Direct3D12 backend.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,15 +20,13 @@ option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 
 # Graphics module backend
 if (WIN32)
-    set(ALIMER_GRAPHICS_API Vulkan CACHE STRING  "Select Graphics API [D3D12 | Vulkan]") 
-	set_property(CACHE ALIMER_GRAPHICS_API PROPERTY STRINGS D3D12 Vulkan)
+    option(ALIMER_D3D12 "Include Direct3D12 backend" ON)
+    option(ALIMER_VULKAN "Include Vulkan backend" ON)
 elseif (WINDOWS_STORE)
-    set(ALIMER_GRAPHICS_API D3D12 CACHE STRING "Use Direct3D12 Graphics API" FORCE)
+    set(ALIMER_D3D12 ON CACHE BOOL "Use Direct3D12 backend")
 else ()
-    set(ALIMER_GRAPHICS_API Vulkan CACHE STRING "Use Vulkan Graphics API" FORCE)
+    set(ALIMER_VULKAN ON CACHE BOOL "Use Vulkan backend")
 endif ()
-string(TOUPPER "${ALIMER_GRAPHICS_API}" ALIMER_GRAPHICS_API_UPPER)
-set (ALIMER_${ALIMER_GRAPHICS_API_UPPER} ON)
 
 if (ANDROID OR IOS OR EMSCRIPTEN)
     set(ALIMER_BUILD_TOOLS OFF CACHE INTERNAL "Disable tools" FORCE)
@@ -91,7 +89,12 @@ if (ALIMER_BUILD_SHARED)
 else ()
     message(STATUS "  Library         STATIC")
 endif ()
-message (STATUS "  Graphics API:   ${ALIMER_GRAPHICS_API} (ALIMER_${ALIMER_GRAPHICS_API_UPPER})")
+if (ALIMER_D3D12)
+    message (STATUS "  Renderer:       Direct3D12")
+endif()
+if (ALIMER_VULKAN)
+    message (STATUS "  Renderer:       Vulkan")
+endif()
 
 # Install files
 # README.md and license
