--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -74,6 +74,7 @@ target_include_directories(${TARGET_NAME} PUBLIC
 
 target_link_libraries(${TARGET_NAME} PUBLIC
     stb
+    imgui
 )
 
 if (ALIMER_VULKAN)
