--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,10 +20,12 @@ option(ALIMER_BUILD_SAMPLES "Build sample projects" ON)
 
 # Graphics module backend
 if (WIN32)
+    set(ALIMER_D3D11 ON CACHE BOOL "Use Direct3D11 backend")
     option(ALIMER_D3D12 "Include Direct3D12 backend" ON)
     option(ALIMER_VULKAN "Include Vulkan backend" ON)
 elseif (WINDOWS_STORE)
-    set(ALIMER_D3D12 ON CACHE BOOL "Use Direct3D12 backend")
+    set(ALIMER_D3D11 ON CACHE BOOL "Use Direct3D11 backend")
+    option(ALIMER_D3D12 "Include Direct3D12 backend" ON)
 else ()
     set(ALIMER_VULKAN ON CACHE BOOL "Use Vulkan backend")
 endif ()
@@ -89,6 +91,9 @@ if (ALIMER_BUILD_SHARED)
 else ()
     message(STATUS "  Library         STATIC")
 endif ()
+if (ALIMER_D3D11)
+    message (STATUS "  Renderer:       Direct3D11")
+endif()
 if (ALIMER_D3D12)
     message (STATUS "  Renderer:       Direct3D12")
 endif()
