--- a/engine/CMakeLists.txt
+++ b/engine/CMakeLists.txt
@@ -49,6 +49,22 @@ if (WIN32)
     define_engine_source_files(Platform/Windows)
 endif ()
 
+if (ALIMER_D3D11 OR ALIMER_D3D12)
+    define_engine_source_files(Graphics/D3D)
+endif()
+
+if (ALIMER_D3D11)
+    define_engine_source_files(Graphics/D3D11)
+endif()
+
+if (ALIMER_D3D12)
+    define_engine_source_files(Graphics/D3D12)
+endif()
+
+if (ALIMER_VULKAN)
+    #define_engine_source_files(Graphics/Vulkan)
+endif()
+
 group_sources()
 
 if (ALIMER_BUILD_SHARED)
@@ -65,8 +81,8 @@ target_include_directories(${TARGET_NAME} PUBLIC
 )
 
 target_link_libraries(${TARGET_NAME} PUBLIC
-    vgpu
     stb
+    fmt
     imgui
 )
 
@@ -80,6 +96,19 @@ else()
     if(NOT (EMSCRIPTEN OR DIRECT_TO_DISPLAY))
         target_link_libraries(${TARGET_NAME} PRIVATE glfw)
     endif()
+endif()
+
+if (ALIMER_D3D11)
+    target_compile_definitions(${TARGET_NAME} PRIVATE ALIMER_D3D11)
+    target_link_libraries(${TARGET_NAME} PRIVATE dxgi d3d11)
+endif()
+
+if (ALIMER_D3D12)
+    target_compile_definitions(${TARGET_NAME} PRIVATE ALIMER_D3D12)
+endif()
+
+if (ALIMER_VULKAN)
+    target_compile_definitions(${TARGET_NAME} PRIVATE ALIMER_VULKAN)
 endif()
 
 if (MSVC)
